# pygecko

./: .bandit  .codacy.yaml  .gitignore  .landscape.yaml  .travis.yml  README.rst  example.py  notes.md  readme.md  requirements.txt  setup.py  test2.py
cpp/: pub.py  test-pub-sub.py
dev/: collector-test.py  msgpk.py  new_proxy.py  zmq-collector-bag.py
dev/cmdline/: g.py
dev/cpp-simple/: mc.py  subpub.py
dev/cpp/basic/: CMakeLists.txt  main.cpp  test.cpp
dev/cpp/basic/archive/: main.cpp
dev/cpp/basic/msgs/: image.proto  imu.proto  rep_req.proto  vector.proto
dev/cpp/basic/src/: core.cpp  core.hpp  gecko.cpp  gecko.hpp  helpers.hpp  mbeacon.cpp  misc.cpp  misc.hpp  network.cpp  network.hpp  node.cpp  node.hpp  signals.cpp  signals.hpp  tcp.py  time.cpp  time.hpp  transport.cpp  transport.hpp
dev/cpp/basic/tests/: all-test.cpp  core-test.cpp  gecko-test.cpp  ip-test.cpp  msgpack-test.cpp  node-test.cpp  proc-test.cpp  protobuf-test.cpp  simple-zmq-test.cpp  time-test.cpp  zmq-message-test.cpp  zmq-req-test.cpp  zmq-test.cpp
dev/cpp/basic/zmq/: zmq.hpp
dev/cpp/multicast/: CMakeLists.txt  main.cpp  mbeacon.cpp  mbeacon.hpp  test.cpp
dev/cpp/protobuf-cpp/: CMakeLists.txt  main.cpp
dev/discover/: README  if_test.py  setup.py  test.py  test2.py  test3.py
dev/discover/old-udp/: cl.py  sv.py
dev/geckolaunch-old/: process.py
dev/http/: index.html  test.py
dev/images/: image-message.ipynb
dev/logging/: test.py
dev/new-core/: tcp.py
dev/processes-complex/: process.py
dev/protobuf-python/: address_pb2.py  test.py
dev/quadruped/: launch.json  lidar.py  move.py  run.sh  vision.py
dev/services/: test.py
dev/sockets/: srv.c
dev/srv/: funargs.py
dev/tmp/: test.py
docs/: doc.md
docs/Markdown/: readme.md
drivers/: Imu.py  Joystick.py
drivers/imu/: Imu.py
drivers/joystick/: Joystick.py
example/: CursesKeyboard.py  launch.py
example/plugins/: chatbot.py
example/servers/: VideoOdometry.py
examples/: readme.md
examples/complex/: tcp.py
examples/geckolaunch/: launch-key.json  launch.json  process.py  readme.md  run.sh
examples/sink/: map.py  pub.py
examples/sink/image/: sub.py  video.py
examples/sink/json-save/: msgbox.py  readme.md
examples/sink/lidar-plot/: map.py  pltslamshow.py  pub.py  readme.md  run.sh
examples/sink/msgpack-save/: msgbag.py
examples/sink/pickle-save/: msgbag.py  picklesave.py  ps.py  readme.md
examples/tcp/: readme.md  tcp.py
examples/tcp2/: pub.py  readme.md  sub.py
examples/uds/: readme.md  uds.py
http-server/: test.py
new_version/: readme.md  setup.py
new_version/dev/: readme.md
new_version/dev/archive/: http-server.py
new_version/dev/processes/: geckolaunch.py  launch.json
new_version/dev/sockets/: CMakeLists.txt  cli.c
new_version/examples/: collector-test.py  data3.msgpack  geckolaunch.py  http-server.py  http.py  msgpk.py  process.py  test.html  zmq-test-uds.py  zmq-test.py  zmq.py
new_version/examples/geckolaunch/: geckolaunch.py  process.py  run.sh
new_version/examples/processes/: process.py
new_version/examples/processes-complex/: geckolaunch.py  launch.json  process.py
new_version/examples/sockets/: srv.py
new_version/pygecko/: __init__.py  file_storage.py
new_version/pygecko/multiprocessing/: __init__.py  gecko.py  geckopy.py
new_version/pygecko/test/: __init__.py
new_version/pygecko/transport/: __init__.py  bag.py  core.py  core_old.py  helpers.py  messages.py  zmq.py  zmqclass.py
new_version/tests/: test.json  test.py  test.yml
old_version/: MIT_License.txt  readme.md  setup.py
old_version/drivers/joystick/: Joystick.py
old_version/drivers/microphone/: Microphone.py
old_version/example/servers/: Navigation.py  Vision.py
old_version/http-server/: camera.py
old_version/original/: setup.py
old_version/original/pygecko/: Bag.py  FileStorage.py  Topic.py  pyWit.py
old_version/original/tests/: test_filestorage.py  test_zmq.py
old_version/original/tmp/: flk.py  test.py  timetest.py
old_version/pygecko/: TTS.py  __init__.py
old_version/sockets/: client.py
old_version/tests/: old_test_msg.py  test.py  test_plugins.py
old_version/tmp/: camera_test.py  test-recv2.py
old_version/zmq/: bagtest.py
old_version/zmq/pygecko/: Bag_old.py
process-class/: example-class.py
process-class/pygecko/: __init__.py
pygecko/: Audio.py  Bag.py  Chatbot.py  Messages.py  Sound.py  Topic.py  Vision.py  ZmqClass.py  __init__.py  file_storage.py  gecko_enums.py  messages.py  msg_helpers.py  navigation.py  pyWit.py
pygecko/fake/: fake_camera.py
pygecko/lib/: Bag.py  Camera.py  Chatbot.py  FileStorage.py  Messages.py  Microphone.py  Sound.py  TTS.py  Topic.py  Transforms.py  ZmqClass.py  __init__.py  bag.py  chatbot.py  oldMessages.py  sound.py  sox.py  tts.py  zmqclass.py
pygecko/multiprocessing/: __init__.py  corefinder.py  devices.py  gecko.py  geckofiles.py  geckopy.py  launch.py  log.py  process.py  sig.py
pygecko/pycore/: geckolauncher.py  ip.py  mbeacon.py  transport.py
pygecko/retired/: beacon.py  corefinder.py  log.py  process.py  srv.py
pygecko/servers/: Navigation.py  Speech.py  VideoOdometry.py  Vision.py  __init__.py
pygecko/test/: __init__.py  fake_camera.py  process.py
pygecko/tools/: __init__.py  bag_play.py  bag_record.py  camera_calibrate.py  image_view.py  mjpeg_server.py  service.py  topic.py  topic_echo.py  topic_pub.py  twist_keyboad.py  video.py  webserver.py
pygecko/transport/: __init__.py  beacon.py  core.py  core2.py  devices.py  geckocorefile.py  helpers.py  protocols.py  srv.py  zmq_base.py  zmq_req_rep.py  zmq_sub_pub.py  zmqclass.py
retired/retired/: devices.py
retired/uds/: uds.py
sockets/: client.py
test/: test_bag.py  test_filestorage.py  test_msg.py  test_zmq.py
tests/: test.py  test_bag.py  test_echo_topic.py  test_filestorage.py  test_msg.py  test_wit.py  test_zmq.py  test_zmq2.py
tmp/: test-recv.py  test-zmq.py  test.py  timetest.py
tmp/templates/: 404.html  main.html
zmq/: bagtest.py  cr.py  data3.msgpack  msgpk.py  msgpk2.py  users.py
zmq/pygecko/: ZmqClass.py  bag.py  messages.py
(+19 files in other folders)
